Fixing 'i' on mobile

--- a/Idea1/css/idea1.css
+++ b/Idea1/css/idea1.css
@@ -1115,10 +1115,14 @@ footer a:hover {
     .bg-i {
         background: url(../img/i.png) no-repeat 0px 4px;
         background-size: 13px;
+        top: -3px;
+        position: relative;
     }
     .bg-i-small {
         background: url(../img/i.png) no-repeat 0px 4px;
         background-size: 9px;
+        top: -3px;
+        position: relative;
     }
 }
 @media (max-width: 480px) {
@@ -1158,14 +1162,7 @@ footer a:hover {
         margin: 0 0 30px;
         font-size: 18px;
     }
-    .bg-i {
-        background: url(../img/i.png) no-repeat 0px 4px;
-        background-size: 13px;
-    }
-    .bg-i-small {
-        background: url(../img/i.png) no-repeat 0px 4px;
-        background-size: 9px;
-    }
+    
 
 }
 
